; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_xml.c_amalgamate.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_xml.c_amalgamate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i32*, i64, i32*)* @amalgamate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @amalgamate(i8** %0, i32* %1, i64 %2, i32* %3) #0 {
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store i8** %0, i8*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %12 = load i8**, i8*** %5, align 8
  %13 = icmp ne i8** %12, null
  br i1 %13, label %14, label %62

14:                                               ; preds = %4
  %15 = load i8**, i8*** %5, align 8
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %9, align 8
  br label %17

17:                                               ; preds = %57, %14
  %18 = load i8*, i8** %9, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %61

20:                                               ; preds = %17
  %21 = load i8**, i8*** %5, align 8
  %22 = getelementptr inbounds i8*, i8** %21, i32 1
  store i8** %22, i8*** %5, align 8
  %23 = load i8*, i8** %22, align 8
  store i8* %23, i8** %10, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = icmp ne i8* %24, null
  %26 = zext i1 %25 to i32
  %27 = call i32 @assert(i32 %26)
  %28 = load i8*, i8** %9, align 8
  %29 = call i64 @strlen(i8* %28)
  store i64 %29, i64* %11, align 8
  %30 = load i64, i64* %7, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %39

32:                                               ; preds = %20
  %33 = load i32*, i32** %6, align 8
  %34 = load i8*, i8** %9, align 8
  %35 = load i64, i64* %11, align 8
  %36 = call i32* @apr_hash_get(i32* %33, i8* %34, i64 %35)
  %37 = icmp ne i32* %36, null
  br i1 %37, label %38, label %39

38:                                               ; preds = %32
  br label %57

39:                                               ; preds = %32, %20
  %40 = load i32*, i32** %6, align 8
  %41 = load i32*, i32** %8, align 8
  %42 = load i8*, i8** %9, align 8
  %43 = load i64, i64* %11, align 8
  %44 = call i32 @apr_pstrndup(i32* %41, i8* %42, i64 %43)
  %45 = load i64, i64* %11, align 8
  %46 = load i8*, i8** %10, align 8
  %47 = icmp ne i8* %46, null
  br i1 %47, label %48, label %52

48:                                               ; preds = %39
  %49 = load i32*, i32** %8, align 8
  %50 = load i8*, i8** %10, align 8
  %51 = call i32* @apr_pstrdup(i32* %49, i8* %50)
  br label %53

52:                                               ; preds = %39
  br label %53

53:                                               ; preds = %52, %48
  %54 = phi i32* [ %51, %48 ], [ null, %52 ]
  %55 = call i32 @apr_hash_set(i32* %40, i32 %44, i64 %45, i32* %54)
  br label %56

56:                                               ; preds = %53
  br label %57

57:                                               ; preds = %56, %38
  %58 = load i8**, i8*** %5, align 8
  %59 = getelementptr inbounds i8*, i8** %58, i32 1
  store i8** %59, i8*** %5, align 8
  %60 = load i8*, i8** %59, align 8
  store i8* %60, i8** %9, align 8
  br label %17

61:                                               ; preds = %17
  br label %62

62:                                               ; preds = %61, %4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32* @apr_hash_get(i32*, i8*, i64) #1

declare dso_local i32 @apr_hash_set(i32*, i32, i64, i32*) #1

declare dso_local i32 @apr_pstrndup(i32*, i8*, i64) #1

declare dso_local i32* @apr_pstrdup(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
